oc/deploy-microservices-teams.yaml
apiVersion: v1
items:
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: microservices-teams
      app.kubernetes.io/component: microservices-teams
      app.kubernetes.io/instance: microservices-teams
    name: microservices-teams
  spec:
    lookupPolicy:
      local: false
  status:
    dockerImageRepository: ""
- apiVersion: build.openshift.io/v1
  kind: BuildConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: microservices-teams
      app.kubernetes.io/component: microservices-teams
      app.kubernetes.io/instance: microservices-teams
    name: microservices-teams
  spec:
    nodeSelector: null
    output:
      to:
        kind: ImageStreamTag
        name: microservices-teams:latest
    postCommit: {}
    resources: {}
    source:
      git:
        ref: migration_to_openshift
        uri: https://github.com/azizzakiryarov/microservices-teams.git
      type: Git
    strategy:
      dockerStrategy:
        from:
          kind: ImageStreamTag
          name: openjdk:11-jre-slim
          namespace: azizzakiryarov-dev
      type: Docker
    triggers:
    - github:
        secret: go44IFV_SkJ0GMcisxJB
      type: GitHub
    - generic:
        secret: 9F7sEXs8Qgy081EaPobs
      type: Generic
    - type: ConfigChange
    - imageChange: {}
      type: ImageChange
  status:
    lastVersion: 0
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"microservices-teams:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"microservices-teams\")].image"}]'
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: microservices-teams
      app.kubernetes.io/component: microservices-teams
      app.kubernetes.io/instance: microservices-teams
    name: microservices-teams
  spec:
    replicas: 1
    selector:
      matchLabels:
        deployment: microservices-teams
    strategy: {}
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          deployment: microservices-teams
      spec:
        containers:
        - image: ' '
          name: microservices-teams
          ports:
          - containerPort: 8082
            protocol: TCP
          resources: {}
  status: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: microservices-teams
      app.kubernetes.io/component: microservices-teams
      app.kubernetes.io/instance: microservices-teams
    name: microservices-teams
  spec:
    ports:
    - name: 8082-tcp
      port: 8082
      protocol: TCP
      targetPort: 8082
    selector:
      deployment: microservices-teams
  status:
    loadBalancer: {}
kind: List
metadata: {}
